--- a/server/package.json
+++ b/server/package.json
@@ -35,6 +35,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
+    "@types/cors": "^2.8.19",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/streamifier": "^0.1.2"
   }
