--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
+    "node-cache": "^5.1.2",
     "nodemon": "^3.1.11",
     "pg": "^8.16.3",
     "pg-hstore": "^2.3.4",
